# minecraft-control

./: Cargo.toml  README.md
assets/: index.html  styles.css
src/: main.rs  minecraft.rs
